# my_jobs_agent_python

./: .env.example  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  run-one.py  run.py  test_telegram.py
.cursor/rules/: playground.mdc
.github/workflows/: cron.yml
core/: analyzer.py  fetch.py  prompt.py
docs/: design-multi-source-phase1.md  design-v2ex.md  doc.md
llm/: openai.py
scripts/: debug_eleduck.py  migrate.py  run_one.py  telegram_debug.py  test_telegram.py  v2ex_debug.py
sources/: __init__.py  base.py  eleduck.py
src/jobs_agent/: __main__.py
src/jobs_agent/core/: analyzer.py  pipeline.py
src/jobs_agent/llm/: openai.py
src/jobs_agent/sources/: __init__.py  eleduck.py  v2ex.py
src/jobs_agent/sources/parsers/: v2ex_feed.py
src/jobs_agent/storage/: __init__.py  local.py  s3.py
storage/: __init__.py  base.py  local.py  s3.py
tools/: analyze_data.py  base_llm.py  config.py  fetch_and_parse.py  fetch_and_parse_all.py  fetch_page.py  llm_doubao.py  llm_openai.py  load_json_data.py  parse_detail_page.py  parse_list.py  prompt.py  telegram.py
